Added the Child Profile Fragments status:Successfully

--- a/app/src/main/res/layout/free_parenting_baby_edit_profile_fragment.xml
+++ b/app/src/main/res/layout/free_parenting_baby_edit_profile_fragment.xml
@@ -406,6 +406,7 @@
                                 android:backgroundTint="#8b8b8b"
                                 android:textColor="@color/black"
                                 android:textSize="17sp"
+                                android:inputType="phone"
                                 android:textStyle="bold" />
                         </LinearLayout>
 
