--- a/app/src/main/res/layout/purchase_plan_content_layout.xml
+++ b/app/src/main/res/layout/purchase_plan_content_layout.xml
@@ -30,26 +30,21 @@
 
         <com.google.android.material.button.MaterialButton
             android:id="@+id/buy_btn"
-            android:layout_width="match_parent"
+            android:layout_width="200dp"
             android:layout_height="wrap_content"
-            android:layout_gravity="bottom"
-            android:layout_marginStart="20dp"
-            android:layout_marginEnd="20dp"
+            android:layout_gravity="bottom|center"
+            android:backgroundTint="#8d69ff"
             android:layout_marginBottom="20dp"
-            android:background="@drawable/bg_desgin_for_btn"
-            android:elevation="5dp"
             android:fontFamily="@font/montserrat"
-            android:paddingTop="13dp"
-            android:paddingBottom="13dp"
-            android:text="Get this course"
+            android:paddingTop="20dp"
+            android:paddingBottom="20dp"
+            android:text="Enroll now"
+            android:textSize="18sp"
             android:textAllCaps="false"
             android:textColor="@color/white"
-            android:textSize="13sp"
             android:textStyle="bold"
-            app:backgroundTint="@null"
-            app:layout_behavior="@string/hide_bottom_view_on_scroll_behavior"
-            app:rippleColor="#6cc1d7"
-            app:strokeWidth="2dp" />
+            app:cornerRadius="8dp"
+            app:layout_behavior="@string/hide_bottom_view_on_scroll_behavior" />
 
 
     </androidx.coordinatorlayout.widget.CoordinatorLayout>
