--- a/app/src/main/res/menu/free_parenting_btom_nav.xml
+++ b/app/src/main/res/menu/free_parenting_btom_nav.xml
@@ -4,7 +4,7 @@
     <item
         android:id="@+id/free_feedback_segments"
         android:enabled="true"
-        android:icon="@drawable/ic_cancel"
+        android:icon="@drawable/ic_feedback"
         android:title="Feedback" />
 
 
