--- a/app/src/main/res/layout/remides_layout_fragments.xml
+++ b/app/src/main/res/layout/remides_layout_fragments.xml
@@ -25,6 +25,7 @@
 
             <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
                 android:layout_width="match_parent"
+                android:id="@+id/swipe_layout"
                 android:layout_height="match_parent">
 
 
@@ -33,6 +34,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:padding="10dp"
+                    tools:listitem="@layout/item_act_podcast"
                     app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                     app:layout_constraintBottom_toTopOf="@+id/upgradeButton" />
 
