Converted the Colour status:Successfully

--- a/app/src/main/res/layout/alert_of_kit_dialog.xml
+++ b/app/src/main/res/layout/alert_of_kit_dialog.xml
@@ -64,8 +64,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:backgroundTint="@color/color_primary"
             android:padding="10dp"
+            app:backgroundTint="@color/color_dialog_btn"
             android:text="Fill Now"
             android:textAllCaps="false"
             android:textColor="@color/white"
