--- a/app/src/main/res/layout/gif_dialog.xml
+++ b/app/src/main/res/layout/gif_dialog.xml
@@ -49,6 +49,7 @@
         android:layout_marginTop="32dp"
         android:layout_marginEnd="32dp"
         android:layout_marginBottom="16dp"
+        app:backgroundTint="@color/color_dialog_btn"
         android:background="@drawable/round_button_new_ticket"
         android:paddingStart="32dp"
         android:paddingEnd="32dp"
