--- a/app/src/main/res/layout/msg_dialog.xml
+++ b/app/src/main/res/layout/msg_dialog.xml
@@ -49,9 +49,10 @@
         android:background="@drawable/round_button_new_ticket"
         android:paddingStart="32dp"
         android:paddingEnd="32dp"
+        app:backgroundTint="@color/color_dialog_btn"
         android:text="@string/close"
         android:textAllCaps="false"
-        android:textColor="#fff"
+        android:textColor="@color/white"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
