--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -55,6 +55,7 @@
     <color name="black_high_opacity">#40000000</color>
     <color name="color_normal">#3372C2</color>
     <color name="color_primary">#0679C3</color>
+    <color name="color_dialog_btn">#EC5F4A</color>
 
     <color name="video_container">#7ea8e7</color>
     <color name="video_inner_color">#d4e2f7</color>
