Added the Resource status:Successfully

--- a/app/src/main/res/layout/alert_of_kit_dialog.xml
+++ b/app/src/main/res/layout/alert_of_kit_dialog.xml
@@ -18,7 +18,8 @@
             android:layout_height="72dp"
             android:layout_marginTop="20dp"
             android:scaleType="fitXY"
-            android:src="@drawable/ic_kit_tutorial"
+            android:background="@drawable/circle_blue_fill_boy"
+            android:src="@drawable/kit_content_icon"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
@@ -86,7 +87,8 @@
             android:layout_marginTop="10dp"
             android:text="Not Now"
             android:textAllCaps="false"
-            android:textColor="#2A73CC"
+            app:rippleColor="#C4F18575"
+            android:textColor="@color/color_dialog_btn"
             android:textStyle="bold"
             android:layout_marginBottom="16dp"
             app:layout_constraintBottom_toBottomOf="parent"
