--- a/app/src/main/res/layout/home_options_recyclerview_item.xml
+++ b/app/src/main/res/layout/home_options_recyclerview_item.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout>
+<layout xmlns:tools="http://schemas.android.com/tools">
 
     <LinearLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
@@ -21,6 +21,8 @@
         android:id="@+id/iv_icon"
         android:layout_width="55dp"
         android:layout_height="55dp"
+        tools:src="@drawable/ic_gradma_tip"
+        android:background="@drawable/circle_blue_fill_boy"
         android:layout_marginTop="6dp"
         />
 
