--- a/app/src/main/res/layout/app_rating_layout.xml
+++ b/app/src/main/res/layout/app_rating_layout.xml
@@ -74,50 +74,43 @@
 
                         <ImageButton
                             android:id="@+id/star_1"
-                            android:layout_width="48dp"
-                            android:layout_height="48dp"
-                            android:scaleType="centerInside"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
                             android:layout_margin="5dp"
                             android:background="@android:color/transparent"
-                            android:src="@drawable/star_baby_icon" />
+                            android:src="@drawable/ic_starts_svg_full" />
 
                         <ImageButton
                             android:id="@+id/star_2"
-                            android:layout_width="48dp"
-                            android:layout_height="48dp"
-                            android:scaleType="centerInside"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
                             android:layout_margin="5dp"
                             android:background="@android:color/transparent"
-                            android:src="@drawable/star_baby_icon" />
+                            android:src="@drawable/ic_starts_svg_full" />
 
                         <ImageButton
                             android:id="@+id/star_3"
-                            android:layout_width="48dp"
-                            android:layout_height="48dp"
-                            android:scaleType="centerInside"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
                             android:layout_margin="5dp"
                             android:background="@android:color/transparent"
-                            android:src="@drawable/star_baby_icon" />
+                            android:src="@drawable/ic_starts_svg_full" />
 
                         <ImageButton
                             android:id="@+id/star_4"
-                            android:layout_width="48dp"
-                            android:layout_height="48dp"
-                            android:scaleType="centerInside"
-                            android:tint="#B6B6B6"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
                             android:layout_margin="5dp"
                             android:background="@android:color/transparent"
-                            android:src="@drawable/star_baby_icon" />
+                            android:src="@drawable/ic_starts_svg_empty" />
 
                         <ImageButton
                             android:id="@+id/star_5"
-                            android:layout_width="48dp"
-                            android:layout_height="48dp"
-                            android:scaleType="centerInside"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
                             android:layout_margin="5dp"
-                            android:tint="#B6B6B6"
                             android:background="@android:color/transparent"
-                            android:src="@drawable/star_baby_icon" />
+                            android:src="@drawable/ic_starts_svg_empty" />
 
                     </LinearLayout>
 
@@ -136,17 +129,17 @@
                         android:id="@+id/text_message"
                         android:layout_width="match_parent"
                         android:layout_height="250dp"
+                        android:layout_gravity="center"
                         android:layout_marginStart="20dp"
                         android:layout_marginTop="10dp"
                         android:layout_marginEnd="20dp"
-                        android:elevation="5dp"
                         android:background="@color/white"
+                        android:elevation="5dp"
                         android:fontFamily="@font/montserrat"
                         android:gravity="top"
                         android:hint="Type your message..."
                         android:overScrollMode="always"
                         android:padding="14dp"
-                        android:layout_gravity="center"
                         android:scrollbarStyle="insideInset"
                         android:scrollbars="vertical"
                         android:textColor="@color/black"
@@ -160,7 +153,6 @@
                         android:layout_height="wrap_content"
                         android:layout_gravity="center"
                         android:layout_marginTop="8dp"
-                        android:backgroundTint="#8ad500"
                         android:padding="10dp"
                         android:text="Submit"
                         android:textAllCaps="false"
