--- a/app/src/main/res/layout/remedies_detail_layout_fragment.xml
+++ b/app/src/main/res/layout/remedies_detail_layout_fragment.xml
@@ -140,8 +140,8 @@
                     android:layout_marginTop="16dp"
                     android:layout_marginEnd="16dp"
                     android:layout_marginBottom="16dp"
+                    android:fontFamily="@font/crimson_text_bold"
                     android:text="The lentils  are a good source of fibre and vitamins as well as low fat, cholesterol, and sodium, all of which are essential for the growth and development of a baby . But you need to give them in moderation to your baby.\n\n What we need in ingredients?- We need\n1 Tbsp oil\n1 small onion, diced\n1 Large Carrot, peeled and cut into a small dice\n1 Garlic Clove\n1 Tsp fresh ginger, minced\n2 Tsp curry powder\n1 Tsp cumin\n1 Tsp turmeric\n2 Cups water\n2 Tsp kosher salt\n1 14 oz Can Tomato Puree\n1 Cups Red Lentils, rinsed well\n Brown or White Basmati Rice\n \nMethod-\n1. Heat the oil in a large saucepan over medium heat.\n2. Saute the onions and carrots for 4 minutes.\n3. Add the garlic, ginger, curry, cumin and turmeric and cook for 2 minutes.\n4. Add the lentils, water, salt and tomato puree and bring to a boil.\n5. Stir, cover, reduce heat to a simmer and cook for 35 minutes or until creamy and tender.\n6. Serve it with basmati rice.\n*Allow to cool, store in an appropriate container or ziploc bag, label and freeze for up to 4 months. When ready, defrost in the fridge for 24 hours or place in a pot and bring to heat over low-medium heat.\n \nDisclaimer- Please, be careful with knives, don’t cook recipes with ingredients the baby is allergic to, and use your best judgement with raw ingredients. You are responsible to do the necessary research and make appropriate food-handling decisions for you and your baby.\n\n"
-                    android:textColor="@color/textGrey"
                     android:textSize="13sp"
                     android:textStyle="bold" />
 
